--- a/my-react-app/src/components/home.css
+++ b/my-react-app/src/components/home.css
@@ -1,29 +1,15 @@
-.flex-container {
-    display: flex;
-    color: white;
-    flex-direction: row;
-    justify-content: space-evenly;
-    height: 80vh;
-}
-
-.flex-container > div {
-    margin: 10px;
-    padding: 20px;
-    font-size: 30px;
-}
-
 img {
-    width: 100%;
-    height: 75vh;
+    width: 90%;
+    height: 80vh;
     object-fit: cover;
     border-radius: 20px;
+    object-position: 0% 55%;
 }
 
 .intro {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: left;
+    align-items: center;
     line-height: 5%;
 }
-
