--- a/my-react-app/src/components/homeButton.css
+++ b/my-react-app/src/components/homeButton.css
@@ -1,14 +1,15 @@
 .flex-container-button {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-around;
+    width: 100%;
 }
 
 .flex-container-button > button {
     border-radius: 10px;
     background-color: lightblue;
     color: black;
-    margin-right: 20px;
+    /* margin-right: 20px; */
 }
 
 .button-icon {
